[project]
name = "coolroute"
version = "0.2.0"
description = "CoolRoute: Urban Heat Island-aware Pareto routing for e-micromobility — satellite LST fusion + Markov chain drive cycle + battery aging models."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Exoristos" }]
license = "MIT"

dependencies = [
    # --- geo / raster ---
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "zarr>=2.18",
    # --- data / numerics ---
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    # --- spatial statistics ---
    "libpysal>=4.8",
    "esda>=2.4",
    # --- routing / graph ---
    "osmnx>=1.9",
    "networkx>=3.2",
    # --- optimization (Pareto) ---
    "pymoo>=0.6",
    # --- earth engine ---
    "earthengine-api>=1.0",
    # --- API ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # --- dashboard ---
    "streamlit>=1.33",
    "folium>=0.16",
    "streamlit-folium>=0.18",
    # --- utils ---
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "mapclassify>=2.6",
    "statsmodels>=0.14.6",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uhi_battery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
